# SequentialThreadPool

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  SequentialThreadPool.hpp  main.cpp
example/: CMakeLists.txt  main.cpp
include/: SequentialThreadPool.hpp
test/: CMakeLists.txt  test.cpp
